--- a/deefy-web/src/app/artista/artista.component.html
+++ b/deefy-web/src/app/artista/artista.component.html
@@ -1,9 +1,25 @@
-<p>artista works!</p>
-
-
-<table border="1">
-  <tr *ngFor="let artista of artistas">
-    <td>{{ artista.id }}</td>
-    <td>{{ artista.nome }}</td>
-   </tr>
-  </table>
+<table class="table" style="width: 80%">
+  <thead>
+    <tr>
+      <th scope="col">ID</th>
+      <th scope="col">Nome</th>
+      <th scope="col">Editar </th>
+      <th scope="col"> Excluir</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let artista of artistas">
+      <td> {{ artista.id }}</td>
+      <td> {{ artista.nome }}</td>
+      <td>
+        <button (click)="editar(artista.id)" class="btn btn-light">
+          <i class="bi bi-pencil"></i>
+        </button>
+      </td>
+      <td>
+        <button (click)="excluir(artista.id)" class="btn btn-light">
+          <i class="bi bi-trash"></i>
+        </button>
+      </td>
+    </tr>
+  </tbody>
