--- a/deefy-web/src/app/genero/genero.component.html
+++ b/deefy-web/src/app/genero/genero.component.html
@@ -1,7 +1,3 @@
-<p>Gênero funcionando!</p>
-
-
-
 <table class="table" style="width: 80%">
   <thead>
     <tr>
@@ -13,10 +9,7 @@
     </tr>
   </thead>
   <tbody>
-    <div *ngFor="let genero of generos">
-      {{ genero.id }}
-    </div>
-    <!--tr *ngFor="let genero of generos">
+    <tr *ngFor="let genero of generos">
       <td> {{ genero.id }}</td>
       <td> {{ genero.nome }}</td>
       <td> {{ genero.descricao }}</td>
@@ -30,5 +23,5 @@
           <i class="bi bi-trash"></i>
         </button>
       </td>
-    </tr-->
+    </tr>
   </tbody>
