--- a/deefy-web/src/app/editar-genero/editar-genero.component.html
+++ b/deefy-web/src/app/editar-genero/editar-genero.component.html
@@ -1,1 +1,27 @@
-<p>editar-genero works!</p>
+<div class="col col-lg-6">
+  <label class="form-label">Nome</label>
+  <input
+    id="NomeGenero"
+    [(ngModel)]="Nome"
+    type="text"
+    class="form-control"
+    placeholder="Nome do Gênero">
+</div>
+
+<div class="col col-lg-6">
+  <label class="form-label">Descrição</label>
+  <input
+    id="DescricaoMusica"
+    [(ngModel)]="Descricao"
+    type="text"
+    class="form-control"
+    placeholder="Descrição do Gênero">
+</div>
+
+<button
+  type="button"
+  (click)="salvar()"
+  class="btn btn-primary"
+  style="margin-top: 15px; margin-left: 15px;">Salvar</button>
+
+
