--- a/deefy-web/src/app/musica/musica.component.html
+++ b/deefy-web/src/app/musica/musica.component.html
@@ -16,8 +16,8 @@
     <tr *ngFor="let musica of musicas">
     <td>{{ musica.id }}</td>
     <td>{{ musica.nomeMusica }}</td>
-    <td>{{ musica.artistaId }}</td>
-    <td>{{ musica.generoId }}</td>
+    <td>{{ musica.nomeArtista }}</td>
+    <td>{{ musica.nomeGenero }}</td>
     <td>{{ musica.arquivoMusica }}</td>
 
       <td>
