--- a/deefy-web/src/app/editar-artista/editar-artista.component.html
+++ b/deefy-web/src/app/editar-artista/editar-artista.component.html
@@ -1,1 +1,23 @@
-<p>editar-artista works!</p>
+<div class="col col-lg-6">
+  <label class="form-label">Nome</label>
+  <input
+    id="NomeArtista"
+    [(ngModel)]="Nome"
+    type="text"
+    class="form-control"
+    placeholder="Nome do Artista">
+</div>
+<div class="col col-lg-6">
+  <label class="form-label">Genero</label>
+  <select class="form-control" [(ngModel)]="GeneroId">
+    <option *ngFor="let genero of generos" [ngValue]="genero.id" > {{ genero.nome }} </option>
+  </select>
+</div>
+
+<button
+  type="button"
+  (click)="salvar()"
+  class="btn btn-primary"
+  style="margin-top: 15px; margin-left: 15px;">Salvar</button>
+
+
