--- a/deefy-web/src/app/editar-musica/editar-musica.component.html
+++ b/deefy-web/src/app/editar-musica/editar-musica.component.html
@@ -20,27 +20,20 @@
 
 <div class="col col-lg-6">
   <label class="form-label">Artista</label>
-  <input
-    id="ArtistaId"
-    [(ngModel)]="ArtistaId"
-    type="text"
-    class="form-control"
-    placeholder="Artista da Música">
+  <select class="form-control" [(ngModel)]="ArtistaId">
+    <option *ngFor="let artista of artistas" [ngValue]="artista.id" > {{ artista.nome }} </option>
+  </select>
 </div>
 
 <div class="col col-lg-6">
   <label class="form-label">Genero</label>
-  <input
-    id="GeneroId"
-    [(ngModel)]="GeneroId"
-    type="text"
-    class="form-control"
-    placeholder="Genero da Música">
+  <select class="form-control" [(ngModel)]="GeneroId">
+    <option *ngFor="let genero of generos" [ngValue]="genero.id" > {{ genero.nome }} </option>
+  </select>
 </div>
 <button
   type="button"
   (click)="salvar()"
   class="btn btn-primary"
   style="margin-top: 15px; margin-left: 15px;">Salvar</button>
-
 
